--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 numpy==1.20.2
 nlpaug==1.1.3
-nltk==3.6.2
+# nltk==3.6.2
 pandas==1.2.4
 tqdm==4.60.0
 gensim==4.0.1
 matplotlib==3.4.1
 seaborn==0.11.1
-torch==1.8.1
+# torch==1.8.1
